--- a/public/css/calender.css
+++ b/public/css/calender.css
@@ -119,7 +119,7 @@ a {
         padding: 0px 1px 0px 1px;
     }
     .calender .day {
-        width: 1.6rem;
+        width: 1.3rem;
         font-size:0.8rem;
     }
     .calender .dayname {
@@ -294,14 +294,19 @@ yoyaku_button:active { /* 押下時の状態 */
         min-height: 3rem;
         font-size:0.4rem;
     }
-    .cyouka_stars {
-        font-size: 0.8rem;
+    .cyouka_stars,.cyouka_memo {
+        font-size:0.8rem;
     }
-    
+        
 }
 @media (max-width: 650px) {
-    .cyouka_stars {
+    .cyouka_stars,.cyouka_memo {
         font-size: 0.6rem;
+    }
+}
+@media (max-width: 500px) {
+    .cyouka_stars,.cyouka_memo {
+        font-size: 0.45rem;
     }
     
 }
@@ -446,7 +451,9 @@ yoyaku_button:active { /* 押下時の状態 */
 }
 @media (max-width: 780px) {
     .text-center {
+        border-radius: 6px;                
         font-size: 1.2rem;
+        padding: 8px;
     }
     .arrow-right , .arrow-left {
         font-size: 1.0rem;
@@ -455,7 +462,6 @@ yoyaku_button:active { /* 押下時の状態 */
         height: 2.0rem;
     }
 }
-
 
 .modal {
   display: none;
